<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.StartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/timeValue"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/hour"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/hourET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_border"
                    android:gravity="center"
                    android:hint="hh"
                    android:inputType="numberSigned"
                    android:maxEms="2"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/min"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/minuteET"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:background="@drawable/et_border"
                    android:gravity="center"
                    android:hint="mm"
                    android:inputType="numberSigned"
                    android:maxEms="2"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:text="@string/second"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/secondET"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:background="@drawable/et_border"
                    android:gravity="center"
                    android:hint="ss"
                    android:inputType="numberSigned"
                    android:maxEms="2"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="normal" />


            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>